--- a/projects.yaml
+++ b/projects.yaml
@@ -289,6 +289,10 @@ projects:
         - *module_if
         - *module_hic_k20dx
         - records/board/twrkl28z72m.yaml
+    k20dx_xdot_max32670_if:
+        - *module_if
+        - *module_hic_k20dx
+        - records/board/xdot_max32670.yaml
     k20dx_xdot_l151_if:
         - *module_if
         - *module_hic_k20dx
@@ -648,6 +652,10 @@ projects:
     max32625_max32670evkit_if:
         - *module_if
         - *module_hic_max32625
+        - records/board/max32670evkit.yaml
+    k20dx_max32670evkit_if:
+        - *module_if
+        - *module_hic_k20dx
         - records/board/max32670evkit.yaml
     sam3u2c_mkit_dk_dongle_nrf5x_if:
         - *module_if
